crates/jig-cli/src/snapshots/jig__check__tests__check_json.snap
---
source: crates/jig-cli/src/check.rs
expression: render_json(&report)
---
{
  "advisor": [],
  "composite": 99,
  "compositeExact": 98.9,
  "contextCap": null,
  "contextCost": {
    "model": "gpt-4o",
    "provenance": {
      "type": "absolute_bands"
    },
    "totalTokens": 183
  },
  "dimensions": [
    {
      "applicable": true,
      "dimension": "protocol",
      "findings": [],
      "fleetSpread": {
        "median": 100.0,
        "p25": 100.0,
        "p75": 100.0
      },
      "heuristic": false,
      "label": "Protocol compliance",
      "score": 100,
      "scoreExact": 100.0,
      "summary": "clean handshake, no stdout pollution, spec-valid capabilities",
      "weight": 15
    },
    {
      "applicable": true,
      "dimension": "context_cost",
      "findings": [],
      "fleetSpread": {
        "median": 87.1,
        "p25": 43.1,
        "p75": 96.6
      },
      "heuristic": false,
      "label": "Context cost",
      "score": 99,
      "scoreExact": 99.09,
      "summary": "183 tokens (no ecosystem data — absolute bands)",
      "weight": 25
    },
    {
      "applicable": true,
      "dimension": "schema_hygiene",
      "findings": [
        {
          "code": "schema_hygiene.param_missing_description",
          "dimension": "schema_hygiene",
          "fix": "describe each parameter of `make_reservation` so the model can fill it correctly",
          "message": "`make_reservation`: parameter `party` missing a description",
          "points": 2.37,
          "severity": "medium"
        },
        {
          "code": "schema_hygiene.missing_annotations",
          "dimension": "schema_hygiene",
          "fix": "add tool annotations so clients can reason about side effects",
          "message": "3 tool(s) declare no annotations (readOnlyHint, destructiveHint, …)",
          "points": 1.19,
          "severity": "low"
        }
      ],
      "fleetSpread": {
        "median": 98.7,
        "p25": 95.9,
        "p75": 100.0
      },
      "heuristic": false,
      "label": "Schema hygiene",
      "score": 96,
      "scoreExact": 96.44,
      "summary": "`make_reservation`: parameter `party` missing a description (+1 more)",
      "weight": 20
    },
    {
      "applicable": true,
      "dimension": "description_quality",
      "findings": [
        {
          "code": "description_quality.missing_title",
          "dimension": "description_quality",
          "fix": "add a `title` to each tool for nicer client display",
          "message": "3 tool(s) have no human-facing title",
          "points": 1.09,
          "severity": "low"
        }
      ],
      "fleetSpread": {
        "median": 98.3,
        "p25": 95.9,
        "p75": 99.1
      },
      "heuristic": true,
      "label": "Description quality",
      "score": 99,
      "scoreExact": 98.91,
      "summary": "heuristic · 3 tool(s) have no human-facing title",
      "weight": 15
    },
    {
      "applicable": true,
      "dimension": "robustness",
      "findings": [],
      "fleetSpread": {
        "median": 95.3,
        "p25": 89.9,
        "p75": 99.3
      },
      "heuristic": false,
      "label": "Robustness",
      "score": 100,
      "scoreExact": 100.0,
      "summary": "list 12ms, clean shutdown",
      "weight": 25
    }
  ],
  "grade": "A",
  "injection": [],
  "protocolCap": null,
  "protocolVersion": "2025-06-18",
  "rubricVersion": "rubric-v1.5",
  "server": {
    "name": "jig-mock-server",
    "version": "0.1.0"
  },
  "timing": {
    "bootSeconds": null,
    "installSeconds": null,
    "launcherSeconds": null,
    "prewarmSkipped": false,
    "scored": "serverBoot",
    "serverBootSeconds": null
  },
  "toolCount": 3,
  "topFixes": [
    {
      "code": "schema_hygiene.param_missing_description",
      "dimension": "schema_hygiene",
      "fix": "describe each parameter of `make_reservation` so the model can fill it correctly",
      "message": "`make_reservation`: parameter `party` missing a description",
      "points": 2.37,
      "severity": "medium"
    },
    {
      "code": "schema_hygiene.missing_annotations",
      "dimension": "schema_hygiene",
      "fix": "add tool annotations so clients can reason about side effects",
      "message": "3 tool(s) declare no annotations (readOnlyHint, destructiveHint, …)",
      "points": 1.19,
      "severity": "low"
    },
    {
      "code": "description_quality.missing_title",
      "dimension": "description_quality",
      "fix": "add a `title` to each tool for nicer client display",
      "message": "3 tool(s) have no human-facing title",
      "points": 1.09,
      "severity": "low"
    }
  ]
}
